2015-12-18  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO:

	DONE copyseq: fix winit bug, reverts to Xavier even if we call compile with Gaussian.  done: was a bug in copyseq definition.
	0000 addingirnn: slow
	0000 copyseq: gives slightly different result. gradcheck does not work. need to keep around input indices!  fixed.  gradcheck still failing.  speed is slow. (15.232240 vs 11.432132)
	0000 rnnlm: WARNING: Stack input has forw=false. speed: 23.227981 vs 25.988030
	0001 Start investigating (1) slightly different results, (2) speed and memory issues before going any further.
	0001 get all other models to work, sanity check with no array sharing version.  Could make this an option in runtests?
	0001 keep profiling addirnn, initforw probably responsible for remaining difference
	0001 ncelm
	0001 ner
	0002 analyze array sharing in lstm and irnn, compare to master
	0003 - bmul!, baddforw!: make broadcasting ops take small array in either position, fix infersize by having a second pass that assumes add/mul are not broadcasting.
	0003 cannot add three terms, fix in compiler (a+b+c)
	0003 consolidate set and setopt
	0003 examples: use as_symbols option for parse_args
	0003 move compound, loss out of op.
	0003 replace Expr(:&&) with true in compiler
	0003 rethink out/get/reg/dif/getprop set/setprop/setopt naming
	0003 test batch resize
	0003 test cpu softloss. compare quadloss on bigger problem. copy!: softloss@loss.jl:67 ygold copied for gradient. however this may happen twice one for 2arg one for 3arg version of softloss.  prevent that.
	0005 - back: problem with zeroing out the dif0 for back.
	0005 - check TODO, test all
	0005 - check/compare number of arrays allocated for forw/back lstm, count number of useless copies and allocations
	0005 - cleanup net/util.jl
	0005 - compound statements that involve axpb or alpha/beta in add/mul.
	0005 - examples: consolidate train/test functions, maybe demo options.
	0005 - fix compiler to reuse registers and share intermediate tmp